baml_language/crates/baml_tests/snapshots/diagnostic_errors/null_handling/baml_tests__diagnostic_errors__null_handling__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 35217
---
=== TIR2 ===
class user.Address {
  street: string
  zip: string?
}
function user.Address.to_json(self: user.Address) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "street": self.street.to_json(), "zip": self.zip?.to_json() } : map<string, baml.json.json | baml.json.json?>
}
function user.Address.from_json(j: baml.json.json) -> user.Address throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Address
}
class user.Profile {
  name: string
  address: user.Address?
  scores: int[]?
  settings: map<string, string>?
}
function user.Profile.to_json(self: user.Profile) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "name": self.name.to_json(), "address": self.address?.to_json(), "scores": self.scores?.to_json(), "settings": self.settings?.to_json() } : map<string, baml.json.json | baml.json.json?>
}
function user.Profile.from_json(j: baml.json.json) -> user.Profile throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Profile
}
class user.User {
  id: int
  profile: user.Profile?
}
function user.User.to_json(self: user.User) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "id": self.id.to_json(), "profile": self.profile?.to_json() } : map<string, baml.json.json | baml.json.json?>
}
function user.User.from_json(j: baml.json.json) -> user.User throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.User
}
class user.Node {
  value: int
  next: user.Node?
  children: user.Node[]?
  labels: map<string, user.Node>?
}
function user.Node.to_json(self: user.Node) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "value": self.value.to_json(), "next": self.next?.to_json(), "children": self.children?.to_json(), "labels": self.labels?.to_json() } : map<string, baml.json.json | baml.json.json?>
}
function user.Node.from_json(j: baml.json.json) -> user.Node throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Node
}
function user.OptionalChaining(user: user.User?, nonNullUser: user.User, node: user.Node?) -> string throws never {
  { : never
    let a1 = user?.id : int?
    let a2 = user?.profile?.name : string?
    let a3 = user?.profile?.address?.street : string?
    let a4 = user?.profile.name : string?
    let a5 = user?.profile.address.street : string?
    let a6 = user?.profile?.address.street : string?
    let a7 = user?.profile.name : string?
    let a8 = user?.profile?.name : string?
    let a9 = user?.profile?.address?.zip : string?
    let a10 = nonNullUser?.id : int?
    user?.profile?.name = "updated" : "updated"
    user?.profile?.address?.street = "123 Main St" : "123 Main St"
    user?.profile.name = "updated2" : "updated2"
    user?.id Add= 1 : int
    let a11 = <missing> : unknown
    return a2 ?? "default" : string
  }
  !! 1727..1748: did you mean `user?.profile?.name`? `user?.profile.name` does not handle the case when `user?.profile` is null
  !! 2014..2029: did you mean `nonNullUser.id`? `nonNullUser?.id` is unnecessary, because `nonNullUser` cannot be null
}
function user.OptionalIndex(node: user.Node?, items: int[]?, lookup: map<string, int>?, nonNullItems: int[]) -> int throws never {
  { : never
    let b1 = items?.[0] : int?
    let b2 = node?.children?.[0] : user.Node?
    let b3 = node?.children?.[0].value : int?
    let b4 = node?.children?.[0].next?.value : int?
    let b5 = lookup?.["total"] : int?
    let b6 = node?.labels?.["main"] : user.Node?
    let b7 = node?.labels?.["main"].value : int?
    let b8 = node?.children?.[0] : user.Node?
    let b9 = items?.[0].to_string() : unknown
    let b10 = node?.children?.[node?.value] : user.Node?
    let b11 = node?.children?.[items?.[0] ?? 0] : user.Node?
    let b12 = nonNullItems?.[0] : int?
    items?.[0] = 42 : 42
    node?.children?.[0].value = 99 : 99
    lookup?.["total"] = 100 : 100
    node?.labels?.["main"].value = 50 : 50
    items?.[0] Add= 10 : int
    lookup?.["total"] Add= 5 : int
    let b13 = <missing> : unknown
    return b1 ?? 0 : int
  }
  !! 3611..3634: did you mean `items?.[0]?.to_string`? `items?.[0].to_string` does not handle the case when `items?.[0]` is null
  !! 3625..3634: type `int` has no member `to_string`
  !! 3611..3636: `unknown?` is not a function — it cannot be called
  !! 3926..3943: did you mean `nonNullItems[0]`? `nonNullItems?.[0]` is unnecessary, because `nonNullItems` cannot be null
}
function user.OptionalCall(callback: (int) -> string? throws never, nonNullCb: (int) -> string throws never, name: string?) -> string throws never {
  { : never
    let c1 = callback?.(42) : string?
    let c2 = callback?.(42).length : ((self: baml.String) -> int throws never)?
    let c3 = callback?.(42).length : ((self: baml.String) -> int throws never)?
    let c4 = name?.(42) : unknown?
    let c5 = nonNullCb?.(42) : string?
    return c1 ?? "default" : string
  }
  !! 4812..4826: did you mean `callback(42)`? `callback?.(42)` is unnecessary, because `callback` cannot be null
  !! 4918..4932: did you mean `callback(42)`? `callback?.(42)` is unnecessary, because `callback` cannot be null
  !! 5144..5158: did you mean `callback(42)`? `callback?.(42)` is unnecessary, because `callback` cannot be null
  !! 5142..5166: did you mean `callback?.(42)?.length`? `callback?.(42).length` does not handle the case when `callback?.(42)` is null
  !! 5242..5252: `string` is not a function — it cannot be called
  !! 5325..5340: did you mean `nonNullCb(42)`? `nonNullCb?.(42)` is unnecessary, because `nonNullCb` cannot be null
}
function user.NullCoalescing(user: user.User?, fallback: string, count: int) -> string throws never {
  { : never
    let d1 = user?.profile?.name ?? "Anonymous" : string
    let d2 = user?.profile?.name ?? user?.profile?.address?.street ?? "Unknown" : string
    let d3: string = user?.profile?.name ?? fallback : string
    let d4: string? = user?.profile?.name ?? user?.profile?.address?.zip : string?
    let d5 = user?.profile?.scores?.[0] ?? 0 : int
    let d6 = user?.profile?.name ?? fallback : string
    user?.profile?.name = user?.profile?.address?.street ?? "no street" : string
    let d7 = user?.profile?.name ?? fallback : string
    let d8 = count ?? 0 : int
    let d9 = user?.profile?.name ?? null : string | null
    let d10 = user?.profile?.name || "Anonymous" : bool
    return d1 : string
  }
  !! 7267..7277: did you mean `count`? `count ?? 0` is unnecessary, because `count` cannot be null
  ?? 7347..7375: did you mean `user?.profile?.name`? `... ?? null` is unnecessary because `user?.profile?.name` is already nullable
  ?? 7457..7492: did you mean `user?.profile?.name ?? "Anonymous"`? BAML uses `??` instead of `||` for null coalescing
}
function user.Combined(user: user.User?, node: user.Node?, items: int[]?) -> string throws never {
  { : never
    let e1 = user?.profile?.address?.street ?? "unknown" : string
    let e2 = node?.children?.[node?.value ?? 0] : user.Node?
    let e3 = user?.profile?.name ?? node?.labels?.["name"]?.value.to_string() ?? "fallback" : string
    node?.children?.[0].next?.value = user?.id ?? 0 : int
    node?.value Add= items?.[0] ?? 1 : int
    let e4 = <missing> : unknown
    let e5 = node?.children?.[user?.profile?.scores?.[0] ?? 0].value : int?
    let e6 = node?.labels?.["first"]?.children?.[0].value : int?
    node?.labels?.["counter"].value = items?.[0] ?? 0 + 1 : int
    node?.labels?.["counter"].value Add= items?.[0] ?? 0 : int
    node?.children?.[node?.value ?? 0]?.next?.value = node?.value ?? 0 : int
    return e3 : string
  }
  !! 8142..8151: type `int` has no member `to_string`
  !! 8111..8153: `unknown?` is not a function — it cannot be called
  !! 8080..8175: did you mean `user?.profile?.name ?? node?.labels?.["name"]?.value.to_string()`? `user?.profile?.name ?? node?.labels?.["name"]?.value.to_string() ?? "fallback"` is unnecessary, because `user?.profile?.name ?? node?.labels?.["name"]?.value.to_string()` cannot be null
}
class user.Address$stream {
  street: null | string
  zip: null | string
}
class user.Profile$stream {
  name: null | string
  address: null | user.Address$stream
  scores: null | int[]
  settings: null | map<string, string>
}
class user.User$stream {
  id: null | int
  profile: null | user.Profile$stream
}
class user.Node$stream {
  value: null | int
  next: null | user.Node$stream
  children: null | user.Node$stream[]
  labels: null | map<string, user.Node$stream>
}
