baml_language/crates/baml_tests/snapshots/diagnostic_errors/null_handling/baml_tests__diagnostic_errors__null_handling__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: did you mean `user?.profile?.name`? `user?.profile.name` does not handle the case when `user?.profile` is null
    ╭─[ null_handling.baml:60:13 ]
    │
 60 │     let a7 = (user?.profile).name;
    │             ──────────┬──────────  
    │                       ╰──────────── did you mean `user?.profile?.name`? `user?.profile.name` does not handle the case when `user?.profile` is null
    │ 
    │ Note: Error code: E0001
────╯

  [type] Error: did you mean `nonNullUser.id`? `nonNullUser?.id` is unnecessary, because `nonNullUser` cannot be null
    ╭─[ null_handling.baml:69:15 ]
    │
 69 │     let a10 = nonNullUser?.id;
    │               ───────┬───────  
    │                      ╰───────── did you mean `nonNullUser.id`? `nonNullUser?.id` is unnecessary, because `nonNullUser` cannot be null
    │ 
    │ Note: Error code: E0004
────╯

  [type] Error: `unknown?` is not a function — it cannot be called
     ╭─[ null_handling.baml:121:13 ]
     │
 121 │     let b9 = (items?.[0]).to_string();
     │             ────────────┬────────────  
     │                         ╰────────────── `unknown?` is not a function — it cannot be called
     │ 
     │ Note: Error code: E0006
─────╯

  [type] Error: did you mean `items?.[0]?.to_string`? `items?.[0].to_string` does not handle the case when `items?.[0]` is null
     ╭─[ null_handling.baml:121:13 ]
     │
 121 │     let b9 = (items?.[0]).to_string();
     │             ───────────┬───────────  
     │                        ╰───────────── did you mean `items?.[0]?.to_string`? `items?.[0].to_string` does not handle the case when `items?.[0]` is null
     │ 
     │ Note: Error code: E0001
─────╯

  [type] Error: type `int` has no member `to_string`
     ╭─[ null_handling.baml:121:27 ]
     │
 121 │     let b9 = (items?.[0]).to_string();
     │                           ────┬────  
     │                               ╰────── type `int` has no member `to_string`
     │ 
     │ Note: Error code: E0007
─────╯

  [type] Error: did you mean `nonNullItems[0]`? `nonNullItems?.[0]` is unnecessary, because `nonNullItems` cannot be null
     ╭─[ null_handling.baml:130:15 ]
     │
 130 │     let b12 = nonNullItems?.[0];
     │               ────────┬────────  
     │                       ╰────────── did you mean `nonNullItems[0]`? `nonNullItems?.[0]` is unnecessary, because `nonNullItems` cannot be null
     │ 
     │ Note: Error code: E0004
─────╯

  [type] Error: did you mean `callback(42)`? `callback?.(42)` is unnecessary, because `callback` cannot be null
     ╭─[ null_handling.baml:164:14 ]
     │
 164 │     let c1 = callback?.(42);
     │              ───────┬──────  
     │                     ╰──────── did you mean `callback(42)`? `callback?.(42)` is unnecessary, because `callback` cannot be null
     │ 
     │ Note: Error code: E0004
─────╯

  [type] Error: did you mean `callback(42)`? `callback?.(42)` is unnecessary, because `callback` cannot be null
     ╭─[ null_handling.baml:167:14 ]
     │
 167 │     let c2 = callback?.(42).length;
     │              ───────┬──────  
     │                     ╰──────── did you mean `callback(42)`? `callback?.(42)` is unnecessary, because `callback` cannot be null
     │ 
     │ Note: Error code: E0004
─────╯

  [type] Error: did you mean `callback?.(42)?.length`? `callback?.(42).length` does not handle the case when `callback?.(42)` is null
     ╭─[ null_handling.baml:173:13 ]
     │
 173 │     let c3 = (callback?.(42)).length;
     │             ────────────┬───────────  
     │                         ╰───────────── did you mean `callback?.(42)?.length`? `callback?.(42).length` does not handle the case when `callback?.(42)` is null
     │ 
     │ Note: Error code: E0001
─────╯

  [type] Error: did you mean `callback(42)`? `callback?.(42)` is unnecessary, because `callback` cannot be null
     ╭─[ null_handling.baml:173:15 ]
     │
 173 │     let c3 = (callback?.(42)).length;
     │               ───────┬──────  
     │                      ╰──────── did you mean `callback(42)`? `callback?.(42)` is unnecessary, because `callback` cannot be null
     │ 
     │ Note: Error code: E0004
─────╯

  [type] Error: `string` is not a function — it cannot be called
     ╭─[ null_handling.baml:176:14 ]
     │
 176 │     let c4 = name?.(42);
     │              ─────┬────  
     │                   ╰────── `string` is not a function — it cannot be called
     │ 
     │ Note: Error code: E0006
─────╯

  [type] Error: did you mean `nonNullCb(42)`? `nonNullCb?.(42)` is unnecessary, because `nonNullCb` cannot be null
     ╭─[ null_handling.baml:179:14 ]
     │
 179 │     let c5 = nonNullCb?.(42);
     │              ───────┬───────  
     │                     ╰───────── did you mean `nonNullCb(42)`? `nonNullCb?.(42)` is unnecessary, because `nonNullCb` cannot be null
     │ 
     │ Note: Error code: E0004
─────╯

  [type] Error: did you mean `count`? `count ?? 0` is unnecessary, because `count` cannot be null
     ╭─[ null_handling.baml:233:14 ]
     │
 233 │     let d8 = count ?? 0;
     │              ─────┬────  
     │                   ╰────── did you mean `count`? `count ?? 0` is unnecessary, because `count` cannot be null
     │ 
     │ Note: Error code: E0004
─────╯

  [type] Warning: did you mean `user?.profile?.name`? `... ?? null` is unnecessary because `user?.profile?.name` is already nullable
     ╭─[ null_handling.baml:236:13 ]
     │
 236 │     let d9 = user?.profile?.name ?? null;
     │             ──────────────┬─────────────  
     │                           ╰─────────────── did you mean `user?.profile?.name`? `... ?? null` is unnecessary because `user?.profile?.name` is already nullable
     │ 
     │ Note: Error code: E0004
─────╯

  [type] Warning: did you mean `user?.profile?.name ?? "Anonymous"`? BAML uses `??` instead of `||` for null coalescing
     ╭─[ null_handling.baml:239:14 ]
     │
 239 │     let d10 = user?.profile?.name || "Anonymous";
     │              ─────────────────┬─────────────────  
     │                               ╰─────────────────── did you mean `user?.profile?.name ?? "Anonymous"`? BAML uses `??` instead of `||` for null coalescing
     │ 
     │ Note: Error code: E0004
─────╯

  [type] Error: did you mean `user?.profile?.name ?? node?.labels?.["name"]?.value.to_string()`? `user?.profile?.name ?? node?.labels?.["name"]?.value.to_string() ?? "fallback"` is unnecessary, because `user?.profile?.name ?? node?.labels?.["name"]?.value.to_string()` cannot be null
     ╭─[ null_handling.baml:256:13 ]
     │
 256 │ ╭─▶     let e3 = user?.profile?.name
     ┆ ┆   
 258 │ ├─▶         ?? "fallback";
     │ │                            
     │ ╰──────────────────────────── did you mean `user?.profile?.name ?? node?.labels?.["name"]?.value.to_string()`? `user?.profile?.name ?? node?.labels?.["name"]?.value.to_string() ?? "fallback"` is unnecessary, because `user?.profile?.name ?? node?.labels?.["name"]?.value.to_string()` cannot be null
     │     
     │     Note: Error code: E0004
─────╯

  [type] Error: `unknown?` is not a function — it cannot be called
     ╭─[ null_handling.baml:257:11 ]
     │
 257 │         ?? node?.labels?.["name"]?.value.to_string()
     │           ─────────────────────┬────────────────────  
     │                                ╰────────────────────── `unknown?` is not a function — it cannot be called
     │ 
     │ Note: Error code: E0006
─────╯

  [type] Error: type `int` has no member `to_string`
     ╭─[ null_handling.baml:257:42 ]
     │
 257 │         ?? node?.labels?.["name"]?.value.to_string()
     │                                          ────┬────  
     │                                              ╰────── type `int` has no member `to_string`
     │ 
     │ Note: Error code: E0007
─────╯
